# yate

./: Cargo.toml  LICENSE  README.md
src/: editor.rs  main.rs  screen.rs  ui.rs
src/ui/: editor_view.rs  mod.rs  screen.rs
