[package]
name = "yate"
version = "0.1.0"
authors = ["Iurii Shchekochikhin <iurii.shchekochikhin@broadcom.com>"]
keywords = [ "text", "editor", "terminal", "termion" ]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
ropey = "1.2.0"